--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: hsl(0, 0%, 40%);
 }
 
 .calculator {
@@ -12,6 +13,7 @@ body {
     background-color: hsl(0, 0%, 15%);
     border-radius: 20px;    
     font-family: Arial, sans-serif;
+    box-shadow: 3px 3px 10px hsl(0, 0%, 0%);
 }
 
 #display {
@@ -46,10 +48,12 @@ button {
 
 button:hover {
     background-color: hsl(0, 0%, 50%);
+    box-shadow: 0px 0px 10px hsl(0, 0%, 0%);
 }
 
 button:active {
     background-color: hsl(0, 0%, 25%);
+    box-shadow: 0px 0px 10px hsl(0, 0%, 0%);
 }
 
 .operatorButton {
@@ -58,9 +62,11 @@ button:active {
 
 .operatorButton:hover {
     background-color: hsl(39, 98%, 60%);
+    box-shadow: 0px 0px 10px hsl(0, 0%, 0%);
 }
 
 .operatorButton:active {
     background-color: hsl(39, 100%, 42%);
+    box-shadow: 0px 0px 10px hsl(0, 0%, 0%);
 }
 
